unpackaged/main/default/objects/Eligibility_Detail__c/Eligibility_Detail__c.object-meta.xml
<CustomObject>
    <description>This objects holds data details of Care Program eligibility criteria.</description>
    <label>Eligibility Detail</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Eligibility Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>