unpackaged/main/default/objects/Eligibility_Detail__c/fields/Care_Program__c.field-meta.xml
<CustomField>
    <fullName>Care_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Eligibility Details</relationshipLabel>
    <relationshipName>Eligibility_Details</relationshipName>
    <type>Lookup</type>
</CustomField>