unpackaged/main/default/objects/Eligibility_Detail__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>