unpackaged/main/default/objects/Eligibility_Detail__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Criteria</label>
    <referenceTo>EnrollmentEligibilityCriteria</referenceTo>
    <relationshipLabel>Eligibility Details</relationshipLabel>
    <relationshipName>Eligibility_Details</relationshipName>
    <type>Lookup</type>
</CustomField>