unpackaged/main/default/objects/Eligibility_Detail__c/fields/Eligibility_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria_Name__c</fullName>
    <formula>Eligibility_Criteria__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility Criteria Name</label>
    <type>Text</type>
</CustomField>