unpackaged/main/default/objects/Eligibility_Detail__c/fields/Per_Person_Incremental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Per_Person_Incremental_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Per Person Incremental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>