unpackaged/main/default/objects/Eligibility_Detail__c/fields/Single_Person_Income_Limit__c.field-meta.xml
<CustomField>
    <fullName>Single_Person_Income_Limit__c</fullName>
    <label>Single Person Income Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>