unpackaged/main/default/objects/Eligibility_Detail__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>