unpackaged/main/default/objects/Eligibility_Detail__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <label>ZIP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>