unpackaged/main/default/objects/Eligibility_Detail__c/recordTypes/Income_Based.recordType-meta.xml
<RecordType>
    <fullName>Income_Based</fullName>
    <active>true</active>
    <label>Income Based</label>
</RecordType>