unpackaged/main/default/objects/Eligibility_Detail__c/recordTypes/Location_Based.recordType-meta.xml
<RecordType>
    <fullName>Location_Based</fullName>
    <active>true</active>
    <label>Location Based</label>
</RecordType>