unpackaged/main/default/objects/Eligibility_Detail__c/validationRules/Year_must_be_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_must_be_number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LEN (Year__c) &lt;&gt; 0,
NOT(REGEX(Year__c, &quot;[0-9]{4}&quot;))
)&amp;&amp; (!$Setup.Bypass__c.Validation__c ||(LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot; &amp;&amp; LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;eligibility_detail__c&quot;))</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Enter valid year</errorMessage>
</ValidationRule>