unpackaged/main/default/objects/Eligibility_Detail__c/listViews/Income_Details.listView-meta.xml
<ListView>
    <fullName>Income_Details</fullName>
    <columns>NAME</columns>
    <columns>Eligibility_Criteria__c</columns>
    <columns>State__c</columns>
    <columns>Per_Person_Incremental_Amount__c</columns>
    <columns>Single_Person_Income_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Eligibility_Detail__c.Income_Based</value>
    </filters>
    <label>Income Details</label>
</ListView>