unpackaged/main/default/objects/Eligibility_Detail__c/listViews/Location_Based.listView-meta.xml
<ListView>
    <fullName>Location_Based</fullName>
    <columns>NAME</columns>
    <columns>Eligibility_Criteria__c</columns>
    <columns>State__c</columns>
    <columns>ZIP_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Eligibility_Detail__c.Location_Based</value>
    </filters>
    <label>Location Based</label>
</ListView>